examples/errors/branch_type.aaa
fn main begin
    if true begin
        3
    else
        ""
    end
    drop
end
